# datamultiproc

./: .gitignore  README.md  example.py  pyproject.toml
datamultiproc/: __init__.py  composer.py  fileio.py  processor.py  sample.py  test_fileio.py  test_sample.py  utils.py
