[tool.poetry]
name = "datamultiproc"
version = "0.1.1"
description = ""
authors = ["Magnus Glasder"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mglasder/datamultiproc"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
