[tool.poetry]
name = "datamultiproc"
version = "0.1.3"
description = "A Python multiprocessing library for data processing with pipelines."
authors = ["Magnus Glasder"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mglasder/datamultiproc"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
pydantic-yaml = "^0.11.2"
numpy = "^1.24.3"
PyYAML = "^6.0"
pytest = "^7.3.1"
assertpy = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
